--- a/index.html
+++ b/index.html
@@ -26,8 +26,58 @@
                         <a class="nav__items__item__link" href="#contact">Contact</a>
                     </div>
                 </div>
+                <div class="nav__items">
+                    <div class="nav__items__item gsap-nav-item">
+                        <a class="nav__items__item__link" href="https://www.linkedin.com/in/addan-imran-developer/" target="_blank">
+                            <svg width="20px" height="20px" viewBox="0 -2 44 44" version="1.1"
+                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                fill="#000000">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <title>LinkedIn-color</title>
+                                    <desc>Created with Sketch.</desc>
+                                    <defs> </defs>
+                                    <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                        <g id="Color-" transform="translate(-702.000000, -265.000000)" fill="#007EBB">
+                                            <path
+                                                d="M746,305 L736.2754,305 L736.2754,290.9384 C736.2754,287.257796 734.754233,284.74515 731.409219,284.74515 C728.850659,284.74515 727.427799,286.440738 726.765522,288.074854 C726.517168,288.661395 726.555974,289.478453 726.555974,290.295511 L726.555974,305 L716.921919,305 C716.921919,305 717.046096,280.091247 716.921919,277.827047 L726.555974,277.827047 L726.555974,282.091631 C727.125118,280.226996 730.203669,277.565794 735.116416,277.565794 C741.21143,277.565794 746,281.474355 746,289.890824 L746,305 L746,305 Z M707.17921,274.428187 L707.117121,274.428187 C704.0127,274.428187 702,272.350964 702,269.717936 C702,267.033681 704.072201,265 707.238711,265 C710.402634,265 712.348071,267.028559 712.41016,269.710252 C712.41016,272.34328 710.402634,274.428187 707.17921,274.428187 L707.17921,274.428187 L707.17921,274.428187 Z M703.109831,277.827047 L711.685795,277.827047 L711.685795,305 L703.109831,305 L703.109831,277.827047 L703.109831,277.827047 Z"
+                                                id="LinkedIn"> </path>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+                    <div onclick="openPDF()" class="nav__items__item gsap-nav-item">
+                        <a class="nav__items__item__link">
+                            <svg fill="#000000" width="20px" height="20px" viewBox="0 0 846.66 846.66"
+                                style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                                version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <defs>
+                                        <style type="text/css">
+                                            .fil0 {
+                                                fill: white;
+                                                fill-rule: nonzero
+                                            }
+                                        </style>
+                                    </defs>
+                                    <g id="Layer_x0020_1">
+                                        <path class="fil0"
+                                            d="M539.75 794.68c27.15,0 27.15,41.29 0,41.29l-497.47 0c-11.4,0 -20.64,-9.25 -20.64,-20.65l0 -621.69c0,-5.7 2.31,-10.87 6.04,-14.6l162.3 -162.29c4.03,-4.03 9.31,-6.05 14.59,-6.05l466.89 0c11.4,0 20.65,9.25 20.65,20.65l0 361.36c0,27.16 -41.29,27.16 -41.29,0l0 -340.72 -437.7 0 -150.19 150.2 0 592.5 476.82 0zm-351.21 -181.98c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm0 -274.68c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm0 91.56c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm0 91.56c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm0 -274.68c-27.16,0 -27.16,-41.29 0,-41.29l306.67 0c27.16,0 27.16,41.29 0,41.29l-306.67 0zm496.57 238.25c49.84,0 90.24,40.4 90.24,90.24 0,18.1 -5.33,34.95 -14.5,49.07 37.57,24.93 61.47,66.08 64.13,111.2 1.59,27.06 -39.55,29.47 -41.13,2.42 -2.11,-35.69 -22.61,-67.48 -54.13,-84.24 -13.16,7.5 -28.38,11.78 -44.61,11.78 -17.56,0 -33.95,-5.01 -47.81,-13.69 -33.44,16.12 -55.6,49.04 -57.79,86.15 -1.59,27.05 -42.72,24.64 -41.13,-2.42 2.79,-47.18 28.75,-89.88 69.08,-114.28 -7.99,-13.47 -12.58,-29.19 -12.58,-45.99 0,-49.83 40.4,-90.24 90.23,-90.24zm0 41.29c-27.03,0 -48.94,21.92 -48.94,48.95 0,27.03 21.91,48.94 48.94,48.94 27.03,0 48.95,-21.91 48.95,-48.94 0,-27.03 -21.91,-48.95 -48.95,-48.95z">
+                                        </path>
+                                    </g>
+                                </g>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
             </nav>
-            <div class="hamburger" onclick="menuBtnFunction(this)">
+            <!-- <div class="hamburger" onclick="menuBtnFunction(this)">
                 <span></span>
             </div>
             <nav class="mobile-nav">
@@ -36,14 +86,14 @@
                     <li><a href="#profile">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
-            </nav>
+            </nav> -->
             <div class="content-wrapper">
                 <div class="content-wrapper_left">
                     <h2 class="text-heading-2 gsap-content-item">UI / Frontend Engineer</h2>
                     <h1 class="text-gradient gsap-content-item">Bringing your digital <span>ideas</span> to life with
                         custom web apps</h1>
-                    <p class="gsap-content-item">I develop Frontent of your web app in vanillaJS and ReactJS </p>
-                    <a href="" class="gsap-content-item">Resume</a>
+                    <p class="gsap-content-item">I specialize in developing the frontend of web applications using Vanilla JavaScript and ReactJS. I'm proficient in designing any kind of UI with React, Angular, VanillaJS, and have working experience with Vue as well.</p>
+                    <a onclick="openPDF()" class="gsap-content-item">Resume</a>
                 </div>
                 <div class="content-wrapper_right gsap-illustrate-wrapper">
                     <img class="illustration gsap-illustrate" src="./assets/portfolio-illustration.png" alt="">
@@ -70,9 +120,7 @@
                 <button id="jobsite">Preview</button>
             </div>
             <div class="project-content gsap-content">
-                <img class="project-img"
-                    src="./assets/projects/gc/1.png"
-                    alt="">
+                <img class="project-img" src="./assets/projects/gc/1.png" alt="">
                 <div class="project-detail">
                     <h3 class="text-heading-3">Group Caption</h3>
                     <p class="text-ellipsis">The web-based React project that we are developing is designed to provide
@@ -87,9 +135,7 @@
             </div>
 
             <div class="project-content gsap-content">
-                <img class="project-img"
-                    src="./assets/projects/thiscar/1.png"
-                    alt="">
+                <img class="project-img" src="./assets/projects/thiscar/1.png" alt="">
                 <div class="project-detail">
                     <h3 class="text-heading-3">This Car</h3>
                     <p class="text-ellipsis">I have designed a project for a car website that allows users to search for
@@ -104,9 +150,7 @@
                 <button id="thiscar">Preview</button>
             </div>
             <div class="project-content gsap-content">
-                <img class="project-img"
-                    src="./assets/projects/goldleash/1.png"
-                    alt="">
+                <img class="project-img" src="./assets/projects/goldleash/1.png" alt="">
                 <div class="project-detail">
                     <h3 class="text-heading-3">Gold Leash K9</h3>
                     <p class="text-ellipsis">I worked on a website named "Gold Leash K9," formerly known as "My Buddy
@@ -118,9 +162,7 @@
                 <button id="goldleash">Preview</button>
             </div>
             <div class="project-content gsap-content">
-                <img class="project-img"
-                    src="./assets/projects/tailwinds/1.png"
-                    alt="">
+                <img class="project-img" src="./assets/projects/tailwinds/1.png" alt="">
                 <div class="project-detail">
                     <h3 class="text-heading-3">Tailwinds Flight School Management</h3>
                     <p class="text-ellipsis">I have developed a web dashboard named "Tailwinds Flight School Management"
@@ -148,9 +190,7 @@
                 <button>Preview</button>
             </div>
             <div class="project-content gsap-content">
-                <img class="project-img"
-                    src="./assets/projects/whatapitch/1.png"
-                    alt="">
+                <img class="project-img" src="./assets/projects/whatapitch/1.png" alt="">
                 <div class="project-detail">
                     <h3 class="text-heading-3">WhatAPitch</h3>
                     <p class="text-ellipsis">In this project, I was responsible for designing new pages of WhatAPitch
@@ -160,9 +200,7 @@
                 <button id="WhatAPitch">Preview</button>
             </div>
             <div class="project-content gsap-content">
-                <img class="project-img"
-                    src="./assets/projects/taleemly/1.png"
-                    alt="">
+                <img class="project-img" src="./assets/projects/taleemly/1.png" alt="">
                 <div class="project-detail">
                     <h3 class="text-heading-3">Taleemly (LMS)</h3>
                     <p class="text-ellipsis">In this project, my role involved designing the entire LSM system. I was
@@ -175,9 +213,7 @@
                 <button id="taleemly">Preview</button>
             </div>
             <div class="project-content gsap-content">
-                <img class="project-img"
-                    src="./assets/projects/space/1.png"
-                    alt="">
+                <img class="project-img" src="./assets/projects/space/1.png" alt="">
                 <div class="project-detail">
                     <h3 class="text-heading-3">Space</h3>
                     <p class="text-ellipsis">A web-based project in which the user is able to view the destination of
@@ -316,8 +352,8 @@
                 hesitate! Drop me a line and
                 I’ll get back to you ASAP!</p>
 
-            <a class="email gsap-contact-item">addanimran87@gmail.com</a>
-            <a class="phone gsap-contact-item">+92 (303) 029-5464</a>
+            <a class="email gsap-contact-item" href="mailto:addanimran87@gmail.com">addanimran87@gmail.com</a>
+            <a class="phone gsap-contact-item" href="tel:+923030295464">+92 (303) 029-5464</a>
         </div>
         <nav class="nav">
             <div class="nav__logo gsap-contact-nav">Addan Imran</div>
